--- a/exam.html
+++ b/exam.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Exam Management</title>
     <link rel="stylesheet" href="dist/css/main.css">
-</head>
 
+</head>
 <body>
     <div class="app-wrapper">
         <div class="sidebar-wrapper">
@@ -23,9 +22,8 @@
             </div>
         </div>
         <div class="content-wrapper">
-            
+           
         </div>
     </div>
 </body>
-
 </html>
